--- a/angular.json
+++ b/angular.json
@@ -64,7 +64,8 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
             "browserTarget": "locale-mgmt-client:build",
-            "proxyConfig": "proxy.conf.json"
+            "proxyConfig": "src/proxy.conf.js",
+            "port": 4200
           },
           "configurations": {
             "production": {
